logs/igata.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/igata'...
Compiling './lib/python3.5/site-packages/igata/domain.py'...
***   File "./lib/python3.5/site-packages/igata/domain.py", line 11
    print data.domain.format(domain={'name' : name, 'user' : user, 'password' : password})
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/igata/engine.py'...
***   File "./lib/python3.5/site-packages/igata/engine.py", line 63
    print 'Generating script %s.' % filename
                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/igata/script.py'...
***   File "./lib/python3.5/site-packages/igata/script.py", line 68
    print data.config_begin
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/igata/template.py'...
***   File "./lib/python3.5/site-packages/igata/template.py", line 55
    print data.domain.format(domain={'user' : 'admin_user', 'password' : 'admin_password'})
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/igata-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
